correction bug css sur la version mobile

--- a/src/components/demo/_demo.css
+++ b/src/components/demo/_demo.css
@@ -824,6 +824,10 @@ body {
         border-bottom-left-radius: 8px;
         border-bottom-right-radius: 8px;
     }
+    #discord-voice-panel
+    {
+        width: 100%;
+    }
 }
 
 /* @media only screen and (max-height:610px) and (min-width:685px) {
